# Loan-Eligibility-Prediction

./: .gitignore  main.py  pyproject.toml  workflow.md
config/: EDA_config.yaml  featureEngineering_config.yaml  model_training_config.yaml  preprocessing_config.yaml
models/: best_model.joblib  encoder.pkl  scaler.pkl
models/artifacts/: feature_names.txt  metrics_summary.json
notebooks/: EDA_pipeline.ipynb  feature_enginerring.ipynb  model_training.ipynb  preprocessing.ipynb  utils.ipynb
scripts/: compare_models.py  promote_to_production.py
src/: EDA_main.py  EDA_pipeline.py  utils.py
src/eda/: __init__.py  data_quality.py  descriptive_stats.py  eda_documentation.md  eda_pipeline.py  inferential_stats.py  visualizations.py
src/feature_engineering/: __init__.py  domain_features.py  feature_engineering_pipeline.py  interactions.py  transformers.py  validator.py
src/model_training/: __init__.py  data_loader.py  model_training_pipeline.py  model_validator.py
src/preprocessing/: __init__.py  data_loader.py  encoder.py  feature_dropper.py  missing_handler.py  outlier_handler.py  preprocessing_documentation.md  preprocessing_pipeline.py  scaler.py  splitter.py  validator.py
src/utils/: __init__.py  time_utils.py
